# lofi-pos

./: .gitignore  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml
apps/bouncer-mock/: Cargo.toml
apps/bouncer-mock/src/: health.rs  main.rs  printers.rs  reports.rs  seeds.rs
apps/cashier/src-tauri/: Cargo.toml  tauri.conf.json
apps/cashier/src-tauri/capabilities/: default.json
apps/cashier/src-tauri/examples/: seed_owner.rs
apps/cashier/src-tauri/scripts/: build-sidecars.ps1  build-sidecars.sh
apps/cashier/src-tauri/src/: app_state.rs  bootstrap.rs  business_day.rs  cli.rs  crypto.rs  error.rs  keychain.rs  lib.rs  main.rs  net.rs  print.rs  time.rs
apps/cashier/src-tauri/src/acl/: action.rs  mod.rs  policy.rs  role.rs
apps/cashier/src-tauri/src/auth/: mod.rs  pin.rs  service.rs  token.rs
apps/cashier/src-tauri/src/bouncer/: client.rs  mod.rs  print_queue.rs  seed_cache.rs
apps/cashier/src-tauri/src/domain/: apply.rs  event.rs  mod.rs  order.rs  payment.rs  session.rs  spot.rs
apps/cashier/src-tauri/src/eod/: builder.rs  business_day.rs  mod.rs  runner.rs  scheduler.rs  test_support.rs
apps/cashier/src-tauri/src/http/: auth_layer.rs  broadcast.rs  error_layer.rs  mod.rs  server.rs  spot_helper.rs  static_admin.rs
apps/cashier/src-tauri/src/rotation/: mod.rs  scheduler.rs
apps/cashier/src-tauri/src/services/: command_service.rs  day_key.rs  event_service.rs  idempotency.rs  key_manager.rs  locking.rs  mod.rs  utc_day.rs  (+1 more)
apps/cashier/src-tauri/tests/: admin_integration.rs  aggregate_store_integration.rs  commands_integration.rs  crypto_integration.rs  hardening_integration.rs  http_integration.rs  migrations_integration.rs  override_integration.rs  projection_integration.rs  remaining_commands_integration.rs  rotation_integration.rs  setup_integration.rs  validation_integration.rs
(+117 files in other folders)
