[package]
name = "cashier"
version = "0.0.1"
edition = "2021"
rust-version = "1.77"

[lib]
name = "cashier_lib"
path = "src/lib.rs"

[[bin]]
name = "cashier"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# storage + crypto
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
keyring = "3"
include_dir = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# HTTP/WS layer
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs"] }
tower_governor = "0.4"
tempfile = "3"

[dev-dependencies]
anyhow = "1"
proptest = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
